--- a/index.htm
+++ b/index.htm
@@ -1,16 +1,55 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<title>Amazon Route 53 Getting Started</title>	
+<title>Zachs Cloud Resume</title>	
+<style>
+/* Create three equal columns that floats next to each other */
+
+* {
+  box-sizing: border-box;
+}
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
 </head>
 
 <body>
+    <body style="background-color:rgb(255, 255, 255);"></body>
 
-<h1>Routing Internet traffic to Cloudfront distributions for your website stored in an S3 bucket</h1>
+    <div class="row">
+        <div class="column">&nbsp;</div><div class="column"><h1 style="text-align:center;">Zach M. Hunting</h1></div><div class="column">&nbsp;</div>
 
-<p>For more information, see 
-<a href="https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/getting-started.html">Getting Started with Amazon Route 53</a> 
-in the <emphasis>Amazon Route 53 Developer Guide</emphasis>.</p>
+    </div>
+    <div class="row">
+        <div class="column">847 W 530 S Unit 2</div><div class="column">&nbsp;</div><div class="column">&nbsp;</div>
+
+    </div>
+    <div class="row">
+        <div class="column">Logan, UT 84321</div><div class="column" style="text-align:center;">(385)515-9523</div><div class="column">ZachMHunting@gmail.com</div>
+
+    </div>
+
+<hr>
+
+
+<p><b>EXPERIENCE</b></p>
+<p><b>EDUCATION</b></p>
+<p><b>CERTIFICATIONS</b></p>
+<p><b>COMPUTER SKILLS</b></p>
+<p><b>HOBBIES</b></p>
+<p><b>REFERENCES</b></p>
 
 </body>
 
-</html>
+</html> 
